[gd_scene load_steps=4 format=3 uid="uid://x83jnlhefpgp"]

[ext_resource type="Script" path="res://controlsUI/dirControl/dir_control.gd" id="1_87riw"]
[ext_resource type="Texture2D" uid="uid://dgncm7km6k5id" path="res://icon.svg" id="2_q74pi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iece8"]

[node name="DirControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -228.0
offset_bottom = -71.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_87riw")

[node name="TopButton" type="TouchScreenButton" parent="."]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
position = Vector2(24, 0)
scale = Vector2(0.125, 0.125)
texture_normal = ExtResource("2_q74pi")
shape = SubResource("RectangleShape2D_iece8")

[node name="DownButton" type="TouchScreenButton" parent="."]
unique_name_in_owner = true
position = Vector2(32, 56)
shape = SubResource("RectangleShape2D_iece8")

[node name="LeftButton" type="TouchScreenButton" parent="."]
unique_name_in_owner = true
position = Vector2(8, 32)
shape = SubResource("RectangleShape2D_iece8")

[node name="RightButton" type="TouchScreenButton" parent="."]
unique_name_in_owner = true
position = Vector2(56, 32)
shape = SubResource("RectangleShape2D_iece8")
